# rust-solutions

./: .gitignore
.metals/: metals.mv.db
catr/: Cargo.toml
catr/src/: lib.rs  main.rs
commr/: Cargo.toml
commr/src/: lib.rs  main.rs
cutr/: Cargo.toml
cutr/src/: lib.rs  main.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs  main.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs  main.rs
grepr/: Cargo.toml
grepr/src/: lib.rs  main.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
hello/src/: main.rs
hello/tests/: cli.rs
tailr/: Cargo.toml
tailr/src/: lib.rs  main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
wcr/tests/: cli.rs
