[package]
name = "tailr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
regex = "1"
csv = "1"
once_cell = "1"

[dependencies.clap]
version = "4"
features = ["derive", "cargo", "string"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rand = "0.8"
