[package]
name = "uniqr"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Bollmeier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "4"
features = ["derive", "cargo"]

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
rand = "0.8"
